crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-secondary_hash_index_tpch_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q9"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                            |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: profit.nation ASC NULLS LAST, profit.o_year DESC NULLS FIRST                                                                                                                                                                                                              |
|               |   Projection: profit.nation, profit.o_year, sum(profit.amount) AS sum_profit                                                                                                                                                                                                    |
|               |     Aggregate: groupBy=[[profit.nation, profit.o_year]], aggr=[[sum(profit.amount)]]                                                                                                                                                                                            |
|               |       SubqueryAlias: profit                                                                                                                                                                                                                                                     |
|               |         Projection: nation.n_name AS nation, date_part(Utf8("YEAR"), orders.o_orderdate) AS o_year, lineitem.l_extendedprice * (Decimal128(Some(1),20,0) - lineitem.l_discount) - partsupp.ps_supplycost * lineitem.l_quantity AS amount                                        |
|               |           Inner Join: supplier.s_nationkey = nation.n_nationkey                                                                                                                                                                                                                 |
|               |             Projection: lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, supplier.s_nationkey, partsupp.ps_supplycost, orders.o_orderdate                                                                                                                    |
|               |               Inner Join: lineitem.l_orderkey = orders.o_orderkey                                                                                                                                                                                                               |
|               |                 Projection: lineitem.l_orderkey, lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, supplier.s_nationkey, partsupp.ps_supplycost                                                                                                               |
|               |                   Inner Join: lineitem.l_suppkey = partsupp.ps_suppkey, lineitem.l_partkey = partsupp.ps_partkey                                                                                                                                                                |
|               |                     Projection: lineitem.l_orderkey, lineitem.l_partkey, lineitem.l_suppkey, lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, supplier.s_nationkey                                                                                           |
|               |                       Inner Join: lineitem.l_suppkey = supplier.s_suppkey                                                                                                                                                                                                       |
|               |                         Projection: lineitem.l_orderkey, lineitem.l_partkey, lineitem.l_suppkey, lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount                                                                                                             |
|               |                           Inner Join: part.p_partkey = lineitem.l_partkey                                                                                                                                                                                                       |
|               |                             Projection: part.p_partkey                                                                                                                                                                                                                          |
|               |                               Filter: part.p_name LIKE LargeUtf8("%green%")                                                                                                                                                                                                     |
|               |                                 TableScan: part projection=[p_partkey, p_name]                                                                                                                                                                                                  |
|               |                             TableScan: lineitem projection=[l_orderkey, l_partkey, l_suppkey, l_quantity, l_extendedprice, l_discount]                                                                                                                                          |
|               |                         TableScan: supplier projection=[s_suppkey, s_nationkey]                                                                                                                                                                                                 |
|               |                     TableScan: partsupp projection=[ps_partkey, ps_suppkey, ps_supplycost]                                                                                                                                                                                      |
|               |                 TableScan: orders projection=[o_orderkey, o_orderdate]                                                                                                                                                                                                          |
|               |             TableScan: nation projection=[n_nationkey, n_name]                                                                                                                                                                                                                  |
| physical_plan | SortPreservingMergeExec: [nation@0 ASC NULLS LAST, o_year@1 DESC]                                                                                                                                                                                                               |
|               |   SortExec: expr=[nation@0 ASC NULLS LAST, o_year@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                         |
|               |     ProjectionExec: expr=[nation@0 as nation, o_year@1 as o_year, sum(profit.amount)@2 as sum_profit]                                                                                                                                                                           |
|               |       AggregateExec: mode=FinalPartitioned, gby=[nation@0 as nation, o_year@1 as o_year], aggr=[sum(profit.amount)]                                                                                                                                                             |
|               |         RepartitionExec: partitioning=Hash([nation@0, o_year@1], 32), input_partitions=32                                                                                                                                                                                       |
|               |           AggregateExec: mode=Partial, gby=[nation@0 as nation, o_year@1 as o_year], aggr=[sum(profit.amount)]                                                                                                                                                                  |
|               |             ProjectionExec: expr=[n_name@0 as nation, date_part(YEAR, o_orderdate@5) as o_year, l_extendedprice@2 * (Some(1),20,0 - l_discount@3) - ps_supplycost@4 * l_quantity@1 as amount]                                                                                   |
|               |               HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(n_nationkey@0, s_nationkey@3)], projection=[n_name@1, l_quantity@2, l_extendedprice@3, l_discount@4, ps_supplycost@6, o_orderdate@7]                                     |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                              |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                            |
|               |                     DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                                           |
|               |                 HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(l_orderkey@0, o_orderkey@0)], projection=[l_quantity@1, l_extendedprice@2, l_discount@3, s_nationkey@4, ps_supplycost@5, o_orderdate@7]                                |
|               |                   CoalescePartitionsExec                                                                                                                                                                                                                                        |
|               |                     HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(l_suppkey@2, ps_suppkey@1), (l_partkey@1, ps_partkey@0)], projection=[l_orderkey@0, l_quantity@3, l_extendedprice@4, l_discount@5, s_nationkey@6, ps_supplycost@9] |
|               |                       CoalescePartitionsExec                                                                                                                                                                                                                                    |
|               |                         ProjectionExec: expr=[l_orderkey@1 as l_orderkey, l_partkey@2 as l_partkey, l_suppkey@3 as l_suppkey, l_quantity@4 as l_quantity, l_extendedprice@5 as l_extendedprice, l_discount@6 as l_discount, s_nationkey@0 as s_nationkey]                       |
|               |                           HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(s_suppkey@0, l_suppkey@2)], projection=[s_nationkey@1, l_orderkey@2, l_partkey@3, l_suppkey@4, l_quantity@5, l_extendedprice@6, l_discount@7]                |
|               |                             SchemaCastScanExec                                                                                                                                                                                                                                  |
|               |                               BytesProcessedExec                                                                                                                                                                                                                                |
|               |                                 DataSourceExec: partitions=1, partition_sizes=[2]                                                                                                                                                                                               |
|               |                             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(p_partkey@0, l_partkey@1)], projection=[l_orderkey@1, l_partkey@2, l_suppkey@3, l_quantity@4, l_extendedprice@5, l_discount@6]                             |
|               |                               CoalescePartitionsExec                                                                                                                                                                                                                            |
|               |                                 FilterExec: p_name@1 LIKE %green%, projection=[p_partkey@0]                                                                                                                                                                                     |
|               |                                   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                         |
|               |                                     SchemaCastScanExec                                                                                                                                                                                                                          |
|               |                                       BytesProcessedExec                                                                                                                                                                                                                        |
|               |                                         DataSourceExec: partitions=1, partition_sizes=[25]                                                                                                                                                                                      |
|               |                               SchemaCastScanExec                                                                                                                                                                                                                                |
|               |                                 BytesProcessedExec                                                                                                                                                                                                                              |
|               |                                   DataSourceExec: partitions=32, partition_sizes=[23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 22, 22, 22]                                                               |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                        |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                      |
|               |                           DataSourceExec: partitions=32, partition_sizes=[4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]                                                                                                       |
|               |                   SchemaCastScanExec                                                                                                                                                                                                                                            |
|               |                     BytesProcessedExec                                                                                                                                                                                                                                          |
|               |                       DataSourceExec: partitions=32, partition_sizes=[6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 5, 5, 5, 5, 5, 5, 5, 5]                                                                                                           |
|               |                                                                                                                                                                                                                                                                                 |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
