crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow_customer_pk_100000_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: customer_pk_100000"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: customer.c_custkey = Int64(100000)                                                                                |
|               |   TableScan: customer projection=[c_custkey, c_name, c_address, c_nationkey, c_phone, c_acctbal, c_mktsegment, c_comment] |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                                                                               |
|               |   FilterExec: c_custkey@0 = 100000                                                                                        |
|               |     SchemaCastScanExec                                                                                                    |
|               |       BytesProcessedExec                                                                                                  |
|               |         DataSourceExec: partitions=16, partition_sizes=[2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]                   |
|               |                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------+
